fixed the alignment and trying to add the footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,10 @@ p {
   line-height: 14px;
 }
 
+.nav a {
+    transition: all 100ms ease-in-out;
+}
+
 .active {
   color: var(--primary-color) !important;
 }
